innobase/include/dict0load.h
@@ -81,7 +81,8 @@ ulint
 dict_load_foreigns(
 /*===============*/
 					/* out: DB_SUCCESS or error code */
-	const char*	table_name);	/* in: table name */
+	const char*	table_name,	/* in: table name */
+	ibool		check_types);	/* in: TRUE=check type compatibility */
 /************************************************************************
 Prints to the standard output information on all tables found in the data
 dictionary system table. */
